# viviendas_cantabria_streamlit

./: .gitignore  README.md  README_GOOGLE_SHEETS.md  app.py  app2.py  comarcas_municipios.py  coordenadas_municipios.py  google_sheets_loader.py  pyproject.toml  requirements.txt  s3_loader.py
.streamlit/: secrets.toml.example
data/: data_prueba.csv  municipios_cantabria.geojson  precios_distritos_santander.csv  precios_municipios_cantabria.csv
