[project]
name = "viviendas-cantabria-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Raul Herrero",email = "raulherreromenocal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.1.4",
    "folium>=0.13,<0.15",
    "streamlit-folium>=0.16.0",
    "plotly>=5.18.0",
    "numpy>=1.26.3",
    "gspread (>=6.2.1,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "boto3>=1.34.0",
    "pyarrow>=14.0.2",
    "s3fs>=2024.2.0",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
